tests/snapshots/run_wpt_conformance__coreml_pad_float32_4D_tensor_options_mode__reflection_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float32 4D tensor options.mode='reflection', coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'constant_val' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f32[1, 3, 3, 1];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="reflection", value=null);
  }

  outputs { padOutput; }
}
